# webserv

./: .gitignore  CMakeLists.txt  Makefile  Pretty.mk  WS_functions.md  class.cpp  class.hpp  conf.md  def.conf  default.conf  deleted_file.html  file1  main.cpp  open_multiple  save.cpp  server  server_test.cpp  test  test.conf  text1  text2  todo.md  webserv  webserve
config_files/: def.conf  default.conf  old.conf
docs/: WS_functions.md  conf.md
inc/: CGIResponse.hpp  Client.hpp  Config.hpp  ConfigParser.hpp  Location.hpp  ReadWrite.hpp  Request.hpp  Response.hpp  Server.hpp  ServerIO.hpp  Utils.h  WSException.hpp  WebServ.hpp  config.hpp  location.hpp  webserv.h
includes/: config.hpp  configParser.hpp  config_parser.h  location.hpp  parser.h  webserv.h
siege/: siege.conf  urls.txt
siege_test/: siege.conf  test_output.txt  url.txt  urls.txt
src/: Request.cpp  Request.hpp  Server.cpp  Server.hpp  config.cpp  config.hpp  configParser.cpp  configParser.hpp  config_parser.cpp  location.cpp  main.cpp  parser.cpp  server_test.cpp  test.cpp  test.h  utils.cpp  webserv.h
src/42sript/: README.md  createClass.sh
src/client/: CGIResponse.cpp  Client.cpp  PostResponse.cpp  Request.cpp  Response.cpp  postHandler.cpp
src/config/: Config.cpp  ConfigParser.cpp  Location.cpp
src/server/: Server.cpp  ServerClientResponse.cpp  ServerIO.cpp  ServerKq.cpp  ServerRun.cpp  WebServ.cpp  server_test.cpp
src/utils/: ReadWrite.cpp  Utils.cpp  errorMap.cpp  utils.cpp  utils_Maia.cpp
src/webserv/: WebServ.cpp
test/: index.html
upload/: file1  text1  text2
www/: about.html  index.html
www/about/: about.html  about.php  index.html
www/css/: css.css
www/error/: 400.html  403.html  404.html  405.html  413.html  418.html  500.html  501.html  505.html
www/facts/: facts.html
www/not_allowed/: index.html
www/photo/: pointer.cur
www/test/: test.html
www/upload/: delete.php  upload.php  upload_script.php  uploadtmpFile.html
www3/: index.html
www3/about/: about.php  index.html
www3/css/: css.css
(+10 files in other folders)
